add pipeline